Finish first draft of gc post.